# wiki3ai

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  anywidget.json  jupyter-lite.json  jupyter_lite_config.json  jupyterlite_wiki_addon.py  llama_index_quickstart.ipynb  notes.txt  package-lock.json  pyproject.toml  requirements.txt  run_trulens.py  setup.py  webllm-extension.js
.devcontainer/: devcontainer.json  pyodide-devcontainer.json
.github/workflows/: static.yml
_output/: jupyter-lite.json
_output/api/contents/: all.json
_output/api/kernelspecs/: index.json
_output/consoles/: index.html
_output/edit/: index.html
_output/extensions/jupyterlab-browser-ai/: package.json
_output/extensions/jupyterlab-cursor-theme/: package.json
_output/files/: anywidget.ipynb  chromeai.ipynb  chromeai_widget.js  webllm-micropip-local.ipynb
_output/files/notebooks/: chromeai.ipynb  example.ipynb  foo.ipynb  test.ipynb  (+3 more)
_output/lab/: index.html
_output/notebooks/: index.html
_output/pypi/: all.json  panel-1.8.2-py3-none-any.whl
_output/repl/: index.html
_output/tree/: index.html
_output/wiki/: example.html  foo.html  index.html  webllm-comet.html  webllm-javascript.html  webllm-micropip-local.html  webllm-micropip.html
app/: server.py
built-in-chat/: README.md  install.json  package-lock.json  package.json  pyproject.toml
built-in-chat/built_in_chat/: __init__.py
built-in-chat/lib/: ChatHttpKernel.d.ts  ChatHttpKernel.js  federation.js  index.d.ts  index.js  kernel.d.ts  kernel.js  models.d.ts  models.js  shareScope.js
built-in-chat/src/: ChatHttpKernel.ts  federation.ts  index.ts  kernel.ts  models.ts  shareScope.ts
docs/: jupyter-lite.json
docs-prompt-ai/: prompt-api.md.md  session-management.md.md  structured-output-for-prompt-api.md.md
docs/files/: about.ipynb  built-in-chat.ipynb  chromeai.ipynb  prompt_ai.ipynb  webllm.ipynb
docs/pypi/: all.json
docs/wiki/: about.html  built-in-chat.html  chromeai.html  demo.html  hello.html  index.html  lite-kernel.html  prompt_ai.html  webllm-kernel.html  webllm.html
files/: about.ipynb  chromeai.ipynb  demo.ipynb  hello.ipynb  prompt_ai.ipynb  webllm-kernel.ipynb  webllm.ipynb
files/notebooks/: anywidget.ipynb  webllm-comet.ipynb  webllm-javascript.ipynb  webllm-micropip-local.ipynb  webllm.ipynb
files/utils/: chromeai_widget.js
files/wiki/: index.html
jupyterlite-ipfs-webllm/: Dockerfile  ipfs-sidebar.js  webllm-extension.js
jupyterlite_wiki_addon/: __init__.py  addon.py
jupyterlite_wiki_addon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jupyterlite_wiki_addon/templates/: wiki_index.html.j2
lite/: .jupyterlite.doit.db  jupyter_lite_config.json
lite-kernel/: package-lock.json  package.json  tsconfig.json
lite-kernel/labextension/: package.json
lite-kernel/lib/: ChatHttpKernel.d.ts  ChatHttpKernel.js  federation.js  index.d.ts  index.js  kernel.d.ts  kernel.js  models.js  shareScope.d.ts  shareScope.js
lite-kernel/src/: ChatHttpKernel.ts  federation.ts  index.ts  kernel.ts
lite/notebooks/: chromeai.ipynb  webllm.ipynb
lite/pypi/: bokeh-3.8.0-py3-none-any.whl
notebooks/: anywidget.ipynb  chromeai.ipynb  example.ipynb  test.ipynb  webllm-javascript.ipynb
pages/: index.html
pypi/: wiki3_ai-0.5.3-py3-none-any.whl
scripts/: build-lite.sh  check_kernel_in_jupyter.py  find_pattern.py  patch_bundles.py
wiki3ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+85 files in other folders)
