[project]
name = "wiki3ai"
version = "0.2.0"
description = "Wiki3.ai JupyterLite Site"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget==0.9.21",
    "ipywidgets >=8.1.3,<8.31",
    "ipython<8.31",
    "jupyterlite>=v0.7.0rc2",
    "jupyterlite-core",
    "jupyterlite-pyodide-kernel>=0.6.0,<=0.7.0",
    "jupyter_server>=2.4.0,<3",
    "jupyterlab>=4.5.0rc0,<4.6",
    "jupyterlab_server>=2.28.0,<3",
    "notebook_shim>=0.2,<0.3",
    "tornado>=6.2.0",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "tornado",
    "watchfiles",
    "wiki3-ai",
]

[project.optional-dependencies]
dev = [
    "pip",
    "jupyterlab >=4.5.0,<4.6.0",
]

[tool.uv.sources]
wiki3-ai = { path = "python-ai", editable = true }
