[project]
name = "wiki3ai"
version = "0.2.0"
description = "Wiki3.ai JupyterLite Site"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget==0.9.21",
    "ipywidgets",
    "jupyterlite>=0.7.0rc2",
    "jupyterlite-core>=0.7.0",
    "jupyterlite-pyodide-kernel>=0.7.0",
    "jupyter-server",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "tornado",
]

[project.optional-dependencies]
dev = [
    "pip",
    "jupyterlab==4.5.0",
]

[project.entry-points."jupyterlite.addon.v0"]
wiki = "jupyterlite_wiki_addon.addon:WikiPageAddon"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jupyterlite_wiki_addon"]
