[project]
name = "built-in-chat"
version = "0.1.2"
description = "Built-in AI Chat kernel for JupyterLite using Chrome's built-in AI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = []

[build-system]
requires = [
    "hatchling>=1.5.0",
    "jupyterlab>=4.4.0,<5",
    "hatch-jupyter-builder>=0.5",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    "node_modules",
]
artifacts = ["labextension"]

[tool.hatch.build.targets.wheel]
packages = ["built_in_chat"]
artifacts = ["labextension"]

[tool.hatch.build.targets.wheel.shared-data]
"labextension" = "share/jupyter/labextensions/@wiki3-ai/built-in-chat"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["labextension/package.json"]
skip-if-exists = ["labextension/package.json"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["npm"]
